--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                         <div class="bg-gray-50 p-4 rounded-xl shadow-md border border-gray-100 flex flex-col items-center justify-center">
                             <h3 class="text-xl font-semibold text-gray-800 mb-4 text-center">Singing & Music Composing</h3>
                             <div class="relative w-full" style="padding-top: 56.25%;">
-                                <iframe class="absolute top-0 left-0 w-full h-full rounded-lg" src="https://www.youtube.com/embed/VIDEO_ID_2" title="Singing & Music Composing" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                <iframe class="absolute top-0 left-0 w-full h-full rounded-lg" src="https://youtu.be/-c1POSmjgoY" title="Singing & Music Composing" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                             </div>
                             <p class="text-gray-700 text-sm mt-4 text-center">Expressing creativity through melodies and harmonies, fostering my innovative thinking skill.</p>
                         </div>
